Update staff page to reflect timings. TODO: Move this to configuration.

--- a/node-app/src/templates/staff.html
+++ b/node-app/src/templates/staff.html
@@ -23,8 +23,8 @@
         </table>
         <p>
             All TA office hours will be held in McB 106. If you don't find the TAs there, check in the Systems Lab 124.
-            Office hours start Thursday, Aug 25.
+            Office hours start Monday, Jan 27.
+            Please find an updated schedule of office hours <a href="https://bit.ly/2sMmARz">here</a>
         </p>
     </div>
 </div>
-
